--- a/DataProcessing/Views/WorkfileEditor.xaml
+++ b/DataProcessing/Views/WorkfileEditor.xaml
@@ -53,6 +53,30 @@
                         <Setter Property="BorderThickness" Value="1 1 0 1" />
                         <Setter Property="BorderBrush" Value="{DynamicResource ColorBrushGrayBorder}" />
                         <Setter Property="Background" Value="{StaticResource ColorBrushWhite}" />
+                        <Setter Property="FontSize" Value="{StaticResource DefaultFontSize}" />
+                        <Setter Property="FontFamily" Value="{StaticResource FiraSans}" />
+                        <Setter Property="Cursor" Value="Hand" />
+                        <Setter Property="Template">
+                            <Setter.Value>
+                                <ControlTemplate TargetType="{x:Type ListViewItem}">
+                                    <Border
+                                        Padding="{TemplateBinding Padding}"
+                                        BorderThickness="{TemplateBinding BorderThickness}"
+                                        BorderBrush="{TemplateBinding BorderBrush}"
+                                        Background="{TemplateBinding Background}"
+                                        >
+                                        <ContentPresenter />
+                                    </Border>
+                                </ControlTemplate>
+                            </Setter.Value>
+                        </Setter>
+
+                        <Style.Triggers>
+                            <Trigger Property="IsSelected" Value="True">
+                                <Setter Property="Background" Value="{StaticResource BlueColorBrush}" />
+                                <Setter Property="Foreground" Value="{StaticResource ColorBrushWhite}" />
+                            </Trigger>
+                        </Style.Triggers>
                     </Style>
                 </Setter.Value>
             </Setter>
