--- a/DataProcessing/Styles/ButtonStyle.xaml
+++ b/DataProcessing/Styles/ButtonStyle.xaml
@@ -11,6 +11,7 @@
         <Setter Property="FontFamily" Value="{StaticResource FiraSans}" />
         <Setter Property="Background" Value="{StaticResource BlueColorBrush}" />
         <Setter Property="Foreground" Value="{StaticResource ColorBrushWhite}" />
+        <Setter Property="Cursor" Value="Hand" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Button}">
@@ -68,6 +69,7 @@
         <Setter Property="FontFamily" Value="{StaticResource FiraSans}" />
         <Setter Property="Background" Value="{StaticResource ColorBrushWhite}" />
         <Setter Property="Foreground" Value="{StaticResource BlueColorBrush}" />
+        <Setter Property="Cursor" Value="Hand" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Button}">
