--- a/DataProcessing/Views/WorkfileEditor.xaml
+++ b/DataProcessing/Views/WorkfileEditor.xaml
@@ -988,7 +988,38 @@
                                                                 BorderBrush="{TemplateBinding BorderBrush}"
                                                                 BorderThickness="{TemplateBinding BorderThickness}"
                                                                 >
-                                                                <ItemsPresenter />
+                                                                <Grid>
+                                                                    <Grid.ColumnDefinitions>
+                                                                        <ColumnDefinition Width=".5*" />
+                                                                        <ColumnDefinition Width="*" />
+                                                                    </Grid.ColumnDefinitions>
+                                                                    <Grid.RowDefinitions>
+                                                                        <RowDefinition Height="Auto" />
+                                                                        <RowDefinition Height="*" />
+                                                                    </Grid.RowDefinitions>
+
+                                                                    <TextBlock
+                                                                        Text="Sheet"
+                                                                        Style="{StaticResource LabelSmall}"
+                                                                        Padding="7"
+                                                                        Grid.Column="0"
+                                                                        Grid.Row="0"
+                                                                        />
+
+                                                                    <TextBlock
+                                                                        Text="File name"
+                                                                        Style="{StaticResource LabelSmall}"
+                                                                        Padding="7"
+                                                                        Grid.Column="1"
+                                                                        Grid.Row="0"
+                                                                        />
+                                                                    
+                                                                    <ItemsPresenter 
+                                                                        Grid.Column="0"
+                                                                        Grid.ColumnSpan="2"
+                                                                        Grid.Row="1"
+                                                                        />
+                                                                </Grid>
                                                             </Border>
                                                         </ControlTemplate>
                                                     </Setter.Value>
